slatedb-go/go/slatedb.h

typedef enum CSdbError {
    Success = 0,
    InvalidArgument = 1,
    NotFound = 2,
    AlreadyExists = 3,
    IOError = 4,
    InternalError = 5,
    NullPointer = 6,
    InvalidHandle = 7,
    InvalidProvider = 8,
} CSdbError;
// Contains the iterator and a reference to the owner to ensure proper lifetime management
typedef struct CSdbIterator CSdbIterator;
// Internal struct for managing WriteBatch operations in FFI
// Contains the WriteBatch that can be moved out when writing to the database
typedef struct CSdbWriteBatch CSdbWriteBatch;
// Internal struct that owns a Tokio runtime and a SlateDB instance.
// This eliminates the need for a global handle map and shared runtime.
typedef struct SlateDbFFI SlateDbFFI;
typedef struct CSdbResult {
    enum CSdbError error;
    char *message;
} CSdbResult;
typedef struct CSdbPutOptions {
    // TTL type: 0=Default, 1=NoExpiry, 2=ExpireAfter
    uint32_t ttl_type;
    // TTL value in milliseconds (only used when ttl_type=2)
    uint64_t ttl_value;
} CSdbPutOptions;
// Type-safe wrapper around a pointer to SlateDbFFI.
// This provides better type safety than raw u64 handles.
typedef struct CSdbHandle {
    struct SlateDbFFI *_0;
} CSdbHandle;
typedef struct CSdbWriteOptions {
    bool await_durable;
} CSdbWriteOptions;
typedef struct CSdbHandleResult {
    struct CSdbHandle handle;
    struct CSdbResult result;
} CSdbHandleResult;
typedef struct CSdbReadOptions {
    // Durability filter: 0=Memory, 1=Remote
    uint32_t durability_filter;
    // Whether to include dirty/uncommitted data
    bool dirty;
    // Whether to cache fetched blocks
    bool cache_blocks;
} CSdbReadOptions;
typedef struct CSdbValue {
    uint8_t *data;
    uintptr_t len;
} CSdbValue;
typedef struct CSdbScanOptions {
    int32_t durability_filter;
    bool dirty;
    uint64_t read_ahead_bytes;
    bool cache_blocks;
    uint64_t max_fetch_tasks;
} CSdbScanOptions;
typedef struct CSdbKeyValue {
    struct CSdbValue key;
    struct CSdbValue value;
} CSdbKeyValue;
// Initialize logging for SlateDB Go bindings
// This should be called once before using any other SlateDB functions
//
// # Safety
//
// - `level` must be a valid C string pointer or null for default level
struct CSdbResult slatedb_init_logging(const char *level);
// # Safety
//
// - `batch_out` must be a valid pointer to a location where a batch pointer can be stored
struct CSdbResult slatedb_write_batch_new(struct CSdbWriteBatch **batch_out);
// # Safety
//
// - `batch` must be a valid pointer to a WriteBatch
// - `key` must point to valid memory of at least `key_len` bytes
// - `value` must point to valid memory of at least `value_len` bytes
struct CSdbResult slatedb_write_batch_put(struct CSdbWriteBatch *batch,
                                          const uint8_t *key,
                                          uintptr_t key_len,
                                          const uint8_t *value,
                                          uintptr_t value_len);
// # Safety
//
// - `batch` must be a valid pointer to a WriteBatch
// - `key` must point to valid memory of at least `key_len` bytes
// - `value` must point to valid memory of at least `value_len` bytes
// - `options` must be a valid pointer to CSdbPutOptions or null
struct CSdbResult slatedb_write_batch_put_with_options(struct CSdbWriteBatch *batch,
                                                       const uint8_t *key,
                                                       uintptr_t key_len,
                                                       const uint8_t *value,
                                                       uintptr_t value_len,
                                                       const struct CSdbPutOptions *options);
// # Safety
//
// - `batch` must be a valid pointer to a WriteBatch
// - `key` must point to valid memory of at least `key_len` bytes
struct CSdbResult slatedb_write_batch_delete(struct CSdbWriteBatch *batch,
                                             const uint8_t *key,
                                             uintptr_t key_len);
// # Safety
//
// - `handle` must contain a valid database handle pointer
// - `batch` must be a valid pointer to a WriteBatch
// - `options` must be a valid pointer to CSdbWriteOptions or null
struct CSdbResult slatedb_write_batch_write(struct CSdbHandle handle,
                                            struct CSdbWriteBatch *batch,
                                            const struct CSdbWriteOptions *options);
// # Safety
//
// - `batch` must be a valid pointer to a WriteBatch that was previously allocated
struct CSdbResult slatedb_write_batch_close(struct CSdbWriteBatch *batch);
struct CSdbHandleResult slatedb_open(const char *path, const char *url, const char *env_file);
// # Safety
//
// - `handle` must contain a valid database handle pointer
// - `key` must point to valid memory of at least `key_len` bytes
// - `value` must point to valid memory of at least `value_len` bytes
// - `put_options` must be a valid pointer to CSdbPutOptions or null
// - `write_options` must be a valid pointer to CSdbWriteOptions or null
struct CSdbResult slatedb_put_with_options(struct CSdbHandle handle,
                                           const uint8_t *key,
                                           uintptr_t key_len,
                                           const uint8_t *value,
                                           uintptr_t value_len,
                                           const struct CSdbPutOptions *put_options,
                                           const struct CSdbWriteOptions *write_options);
// # Safety
//
// - `handle` must contain a valid database handle pointer
// - `key` must point to valid memory of at least `key_len` bytes
// - `write_options` must be a valid pointer to CSdbWriteOptions or null
struct CSdbResult slatedb_delete_with_options(struct CSdbHandle handle,
                                              const uint8_t *key,
                                              uintptr_t key_len,
                                              const struct CSdbWriteOptions *write_options);
// # Safety
//
// - `handle` must contain a valid database handle pointer
// - `key` must point to valid memory of at least `key_len` bytes
// - `read_options` must be a valid pointer to CSdbReadOptions or null
// - `value_out` must be a valid pointer to a location where a value can be stored
struct CSdbResult slatedb_get_with_options(struct CSdbHandle handle,
                                           const uint8_t *key,
                                           uintptr_t key_len,
                                           const struct CSdbReadOptions *read_options,
                                           struct CSdbValue *value_out);
struct CSdbResult slatedb_flush(struct CSdbHandle handle);
struct CSdbResult slatedb_close(struct CSdbHandle handle);
// # Safety
//
// - `handle` must contain a valid database handle pointer
// - `start_key` must point to valid memory of at least `start_key_len` bytes (if not null)
// - `end_key` must point to valid memory of at least `end_key_len` bytes (if not null)
// - `scan_options` must be a valid pointer to CSdbScanOptions or null
// - `iterator_ptr` must be a valid pointer to a location where an iterator pointer can be stored
struct CSdbResult slatedb_scan_with_options(struct CSdbHandle handle,
                                            const uint8_t *start_key,
                                            uintptr_t start_key_len,
                                            const uint8_t *end_key,
                                            uintptr_t end_key_len,
                                            const struct CSdbScanOptions *scan_options,
                                            struct CSdbIterator **iterator_ptr,
                                            const uint64_t *timeout);
// # Safety
//
// - `iter` must be a valid pointer to a CSdbIterator
// - `kv_out` must be a valid pointer to a location where a key-value pair can be stored
struct CSdbResult slatedb_iterator_next(struct CSdbIterator *iter, struct CSdbKeyValue *kv_out);
// # Safety
//
// - `iter` must be a valid pointer to a CSdbIterator
// - `key` must point to valid memory of at least `key_len` bytes
struct CSdbResult slatedb_iterator_seek(struct CSdbIterator *iter,
                                        const uint8_t *key,
                                        uintptr_t key_len);
// # Safety
//
// - `iter` must be a valid pointer to a CSdbIterator that was previously allocated
struct CSdbResult slatedb_iterator_close(struct CSdbIterator *iter);
void slatedb_free_result(struct CSdbResult result);
void slatedb_free_value(struct CSdbValue value);